--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
+    <!--引入commons工具类-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.11</version>
+    </dependency>
   </dependencies>
 
   <build>
