--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   <!--配置请求入口，请求过滤方式，初始化参数-->
   <servlet>
     <servlet-name>customizeServlet</servlet-name>
-    <servlet-class>com.wcj.v1.servlet.WCJDispatcherServlet</servlet-class>
+    <servlet-class>com.wcj.v1.servlet.WCJDispatcherServletBak</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
       <param-value>classpath:application.properties</param-value>
